<resources>
    <string name="app_name" translatable="false">TikTok Downloader</string>


    <string name="BAN_1" translatable="false">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="BAN_2" translatable="false">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="NATIVE_2" translatable="false">"ca-app-pub-3940256099942544/2247696110"</string>
    <string name="INTERSTIEL" translatable="false">"ca-app-pub-3940256099942544/1033173712"</string>

    <string name="mp3" translatable="false">MP3</string>

    <string name="dismiss">Dismiss</string>

    <string name="continue_">Continue</string>


    <string name="network_error">Unable to connect. Please try again</string>
    <string name="unknown_error">An error was encountered. Please try again later</string>

    <string name="no_app">There are no email applications installed.</string>
    <string name="feedback">Feedback</string>
    <string name="ww">We welcome your feedback</string>


    <string name="tiktok_not_installed">TikTok not installed</string>
    <string name="downloaded">downloaded!</string>
    <string name="how_to_download">How To Download</string>

    <string name="delete_video_confirm">Do you want to delete this file?</string>
    <string name="open_tiktok_header">You have no link in clipboard</string>
    <string name="open_tiktok_message">Open TikTok app and copy link from "Share" menu first</string>
    <string name="DOWNLOAD">DOWNLOAD</string>
    <string name="downloaded_">Downloaded</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="rate_us">Rate us</string>
    <string name="info">Info</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="help_center">Help center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share app</string>
    <string name="share_app_txt">Share app message placeholder</string>
    <string name="no_file_found">no file found</string>
    <string name="do_you_like_tikfollowers">Do You Like TikFans 😍 ?</string>
    <string name="nope">Nope 👎</string>
    <string name="love_it">Love It 👍</string>
    <string name="paste_tiktok_video_link_here">Paste TikTok video link here</string>
    <string name="checking_link">Checking link…</string>
    <string name="completed">Completed!</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="v_h1">Go to your desired video on TikTok and tap Share icon</string>
    <string name="v_h2">Select \'Copy link\'</string>
    <string name="v_h3">Open \'TikFans\' app, come back to this screen and start download</string>
    <string name="ok">OK</string>
    <string name="close">CLOSE</string>
    <string name="search_music_on">Search Music On…</string>
    <string name="no_watermark_video">No watermark video</string>
    <string name="video_with_watermark">Video with watermark</string>
    <string name="share">Share</string>
    <string name="view_on_tiktok">View on TikTok</string>
    <string name="search_video_music">Search video music</string>
    <string name="close_">Close</string>
    <string name="nf_md">File not found. File has been deleted or moved</string>
    <string name="provide_Valid_link">Please provide a valid TikTok video link</string>
    <string name="open_ttk">Open TikTok</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="help">Help</string>

</resources>