<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/dialog_1">

        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="0dp"
            android:src="@drawable/like_anim"
            android:background="@drawable/ph_c_img" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nova_bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/do_you_like_tikfollowers"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="28dp"
                android:paddingEnd="28dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/nova_bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/nope"
                android:background="@drawable/button_red_sqrt"/>

            <TextView
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="28dp"
                android:paddingEnd="28dp"
                android:fontFamily="@font/nova_bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/love_it"
                android:background="@drawable/button_green_sqrt"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>