<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:id="@+id/picture"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:src="@drawable/profile_user_default"-->
<!--            app:civ_border_width="1dp"-->
<!--            app:civ_border_color="@color/dark_accent"/>-->

<!--        <TextView-->
<!--            android:id="@+id/user_name"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:fontFamily="@font/nova_bold"-->
<!--            android:text="X"/>-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:layout_gravity="center">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:minWidth="90dp"-->
<!--                android:gravity="center">-->

<!--                <TextView-->
<!--                    android:id="@+id/followings"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:fontFamily="@font/nova_bold"-->
<!--                    android:textSize="18sp"-->
<!--                    android:text="#"/>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/placeholder_bg"-->
<!--                    android:fontFamily="@font/nova_reg"-->
<!--                    android:textSize="12sp"-->
<!--                    android:text="@string/following"/>-->

<!--            </LinearLayout>-->

<!--            <View-->
<!--                android:layout_width="0.5dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginBottom="5dp"-->
<!--                android:layout_marginStart="3dp"-->
<!--                android:layout_marginEnd="3dp"-->
<!--                android:background="@color/placeholder_bg"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:minWidth="90dp"-->
<!--                android:gravity="center">-->

<!--                <TextView-->
<!--                    android:id="@+id/followers"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:fontFamily="@font/nova_bold"-->
<!--                    android:textSize="18sp"-->
<!--                    android:text="#"/>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/placeholder_bg"-->
<!--                    android:fontFamily="@font/nova_reg"-->
<!--                    android:textSize="12sp"-->
<!--                    android:text="@string/followers"/>-->

<!--            </LinearLayout>-->

<!--            <View-->
<!--                android:layout_width="0.5dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginBottom="5dp"-->
<!--                android:layout_marginStart="3dp"-->
<!--                android:layout_marginEnd="3dp"-->
<!--                android:background="@color/placeholder_bg"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:minWidth="90dp"-->
<!--                android:gravity="center">-->

<!--                <TextView-->
<!--                    android:id="@+id/likes"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:fontFamily="@font/nova_bold"-->
<!--                    android:textSize="18sp"-->
<!--                    android:text="#"/>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/placeholder_bg"-->
<!--                    android:fontFamily="@font/nova_reg"-->
<!--                    android:textSize="12sp"-->
<!--                    android:text="@string/likes"/>-->

<!--            </LinearLayout>-->

<!--        </LinearLayout>-->


        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="@dimen/default_padding"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/black"/>

        </androidx.cardview.widget.CardView>

<!--        <LinearLayout-->
<!--            android:id="@+id/buy"-->
<!--            style="@style/menu_style"-->
<!--            android:layout_marginTop="20dp">-->

<!--            <ImageView-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:src="@drawable/ic_menu_buy" />-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                style="@style/menu_title_tv">-->

<!--                <TextView-->
<!--                    style="@style/menu_title_tv"-->
<!--                    android:layout_margin="0dp"-->
<!--                    android:text="@string/buy_coins" />-->
<!--                <TextView-->
<!--                    style="@style/menu_title_tv"-->
<!--                    android:fontFamily="@font/nova_reg"-->
<!--                    android:textColor="@color/yellow"-->
<!--                    android:layout_margin="0dp"-->
<!--                    android:textSize="12sp"-->
<!--                    android:text="@string/x_coins" />-->

<!--            </LinearLayout>-->

<!--        </LinearLayout>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.5dp"-->
<!--            android:background="@color/dark_accent" />-->



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito"
            android:text="@string/support"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/rate"
            style="@style/menu_style">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_rate"
                app:tint="@color/white" />

            <TextView
                style="@style/menu_title_tv"
                android:text="@string/rate_us" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_accent" />

        <LinearLayout
            android:id="@+id/share"
            style="@style/menu_style">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_share_app"
                app:tint="@color/white" />

            <TextView
                style="@style/menu_title_tv"
                android:text="@string/share_app" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_accent" />

        <LinearLayout
            android:id="@+id/feedback"
            style="@style/menu_style">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_feedback"
                app:tint="@color/white" />

            <TextView
                style="@style/menu_title_tv"
                android:text="@string/report_a_problem" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_accent" />

        <LinearLayout
            android:id="@+id/help"
            style="@style/menu_style">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_menu_help"
                app:tint="@color/white" />

            <TextView
                style="@style/menu_title_tv"
                android:text="@string/help_center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_accent" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/privacy_policy"
            style="@style/menu_style">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_privacy"
                app:tint="@color/white" />

            <TextView
                style="@style/menu_title_tv"
                android:text="@string/privacy_policy" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_accent" />

        <LinearLayout
            android:id="@+id/info"
            style="@style/menu_style">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_info"
                app:tint="@color/white" />

            <TextView
                style="@style/menu_title_tv"
                android:text="@string/info" />
        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>