<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_accent"
    android:padding="@dimen/default_padding"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/cover"
        android:layout_width="120dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp"
        android:src="@color/placeholder_bg">
        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@color/dark_accent2"/>
    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/profile_user_default"
        app:layout_constraintTop_toTopOf="@id/cover"
        app:layout_constraintStart_toEndOf="@id/cover"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/nova_bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nova_reg"
        android:textColor="@color/placeholder_bg"
        android:maxLines="8"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/cover"
        app:layout_constraintTop_toBottomOf="@id/avatar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/cover">

        <TextView
            android:id="@+id/btn_nw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nova_bold"
            android:gravity="center"
            android:text="@string/no_watermark_video"
            android:textColor="@android:color/white"
            android:background="@drawable/button_1_sqrt"/>

        <TextView
            android:id="@+id/btn_w"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nova_bold"
            android:gravity="center"
            android:text="@string/video_with_watermark"
            android:textColor="@android:color/white"
            android:background="@drawable/button_1_sqrt"/>

        <TextView
            android:id="@+id/btn_mp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nova_bold"
            android:gravity="center"
            android:text="@string/mp3"
            android:textColor="@android:color/white"
            android:background="@drawable/button_1_sqrt"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>